# S-VISSR-Ingestor

./: CMakeLists.txt  FY2Demod.grc  README.md  config.yml
src/: config.cpp  config.h  decoder.cpp  decoder.h  deframer.cpp  deframer.h  demodulator.cpp  demodulator.h  main.cpp  svissr_reader.cpp  svissr_reader.h
src/processing/: derand.cpp  derand.h  differentialencoding.cpp  differentialencoding.h  getbit.h  pipe.c  repack_bits_byte.cpp  svissr_reader.cpp  svissr_reader.h
